backend/overlays/dev/back-deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  namespace: default
  labels:
    env: dev
spec:
  selector:
    matchLabels:
      app: backend-fargate
  template:
    metadata:
      labels:
        app: backend-fargate
