backend/overlays/dev/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  namespace: default
spec:
  replicas: 1  # Lower the number of replicas for development
  template:
    spec:
      containers:
        - name: demo-backend
          image: mo991207/counter-springboot-app:dev-latest  # Use a specific image tag for development
          resources:
            limits:
              memory: "256Mi"  # Limit the resources for development
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
