backend/overlays/dev/back-service-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
  labels:
    env: dev
spec:
  selector:
    app: backend-fargate
